--- a/app/src/main/res/layout/dialog_pin.xml
+++ b/app/src/main/res/layout/dialog_pin.xml
@@ -10,8 +10,8 @@
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="280dp"
-        android:layout_height="320dp">
+        android:layout_width="300dp"
+        android:layout_height="480dp">
 
         <ImageView
             android:id="@+id/bullet1"
@@ -121,7 +121,7 @@
             style="?attr/materialButtonElevatedStyle"
             android:id="@+id/btn1"
             android:layout_width="68dp"
-            android:layout_height="wrap_content"
+            android:layout_height="68dp"
             android:text="@string/c1"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -135,7 +135,7 @@
             style="?attr/materialButtonElevatedStyle"
             android:id="@+id/btn2"
             android:layout_width="68dp"
-            android:layout_height="wrap_content"
+            android:layout_height="68dp"
             android:text="@string/c2"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -149,7 +149,7 @@
             style="?attr/materialButtonElevatedStyle"
             android:id="@+id/btn3"
             android:layout_width="68dp"
-            android:layout_height="wrap_content"
+            android:layout_height="68dp"
             android:text="@string/c3"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -163,7 +163,7 @@
             style="?attr/materialButtonElevatedStyle"
             android:id="@+id/btn4"
             android:layout_width="68dp"
-            android:layout_height="wrap_content"
+            android:layout_height="68dp"
             android:text="@string/c4"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -177,7 +177,7 @@
             style="?attr/materialButtonElevatedStyle"
             android:id="@+id/btn5"
             android:layout_width="68dp"
-            android:layout_height="wrap_content"
+            android:layout_height="68dp"
             android:text="@string/c5"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -191,7 +191,7 @@
             style="?attr/materialButtonElevatedStyle"
             android:id="@+id/btn6"
             android:layout_width="68dp"
-            android:layout_height="wrap_content"
+            android:layout_height="68dp"
             android:text="@string/c6"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -205,7 +205,7 @@
             style="?attr/materialButtonElevatedStyle"
             android:id="@+id/btn7"
             android:layout_width="68dp"
-            android:layout_height="wrap_content"
+            android:layout_height="68dp"
             android:text="@string/c7"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -219,7 +219,7 @@
             style="?attr/materialButtonElevatedStyle"
             android:id="@+id/btn8"
             android:layout_width="68dp"
-            android:layout_height="wrap_content"
+            android:layout_height="68dp"
             android:text="@string/c8"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -233,7 +233,7 @@
             style="?attr/materialButtonElevatedStyle"
             android:id="@+id/btn9"
             android:layout_width="68dp"
-            android:layout_height="wrap_content"
+            android:layout_height="68dp"
             android:text="@string/c9"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -263,7 +263,7 @@
             style="?attr/materialButtonElevatedStyle"
             android:id="@+id/btn0"
             android:layout_width="68dp"
-            android:layout_height="wrap_content"
+            android:layout_height="68dp"
             android:text="@string/c0"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
