--- a/app/src/main/res/layout/dialog_pin.xml
+++ b/app/src/main/res/layout/dialog_pin.xml
@@ -9,113 +9,76 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="300dp"
-        android:layout_height="480dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:padding="24dp"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/bullet1"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_centerInParent="true"
-            android:scaleType="center"
             android:src="@drawable/circle_off"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.25"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.07"
+            android:layout_marginHorizontal="4dp"
             tools:ignore="ContentDescription,ImageContrastCheck" />
 
         <ImageView
             android:id="@+id/bullet2"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_centerInParent="true"
-            android:scaleType="center"
             android:src="@drawable/circle_off"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.35"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.07"
+            android:layout_marginHorizontal="4dp"
             tools:ignore="ContentDescription,ImageContrastCheck" />
 
         <ImageView
             android:id="@+id/bullet3"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_centerInParent="true"
-            android:scaleType="center"
             android:src="@drawable/circle_off"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.45"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.07"
+            android:layout_marginHorizontal="4dp"
             tools:ignore="ContentDescription,ImageContrastCheck" />
 
         <ImageView
             android:id="@+id/bullet4"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_centerInParent="true"
-            android:scaleType="center"
             android:src="@drawable/circle_off"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.55"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.07"
+            android:layout_marginHorizontal="4dp"
             tools:ignore="ContentDescription,ImageContrastCheck" />
 
         <ImageView
             android:id="@+id/bullet5"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_centerInParent="true"
-            android:scaleType="center"
             android:src="@drawable/circle_off"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.65"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.07"
+            android:layout_marginHorizontal="4dp"
             tools:ignore="ContentDescription,ImageContrastCheck" />
 
         <ImageView
             android:id="@+id/bullet6"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_centerInParent="true"
-            android:scaleType="center"
             android:src="@drawable/circle_off"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.75"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.07"
+            android:layout_marginHorizontal="4dp"
             tools:ignore="ContentDescription,ImageContrastCheck" />
+    </LinearLayout>
 
-        <TextView
-            android:id="@+id/errorMessage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:textColor="?attr/colorError"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.2"
-            tools:text="Неправильный PIN" />
+    <TextView
+        android:id="@+id/errorMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textColor="?attr/colorError"
+        android:padding="8dp"
+        tools:text="Неправильный PIN"
+        android:visibility="gone"
+        tools:visibility="visible" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="300dp"
+        android:layout_height="360dp">
 
         <Button
             style="?attr/materialButtonElevatedStyle"
@@ -123,13 +86,13 @@
             android:layout_width="68dp"
             android:layout_height="68dp"
             android:text="@string/c1"
-            android:textSize="18sp"
+            android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.1"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.35" />
+            app:layout_constraintVertical_bias="0.05" />
 
         <Button
             style="?attr/materialButtonElevatedStyle"
@@ -137,13 +100,13 @@
             android:layout_width="68dp"
             android:layout_height="68dp"
             android:text="@string/c2"
-            android:textSize="18sp"
+            android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.35" />
+            app:layout_constraintVertical_bias="0.05" />
 
         <Button
             style="?attr/materialButtonElevatedStyle"
@@ -151,7 +114,49 @@
             android:layout_width="68dp"
             android:layout_height="68dp"
             android:text="@string/c3"
-            android:textSize="18sp"
+            android:textSize="24sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.9"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.05" />
+
+        <Button
+            style="?attr/materialButtonElevatedStyle"
+            android:id="@+id/btn4"
+            android:layout_width="68dp"
+            android:layout_height="68dp"
+            android:text="@string/c4"
+            android:textSize="24sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.1"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.35" />
+
+        <Button
+            style="?attr/materialButtonElevatedStyle"
+            android:id="@+id/btn5"
+            android:layout_width="68dp"
+            android:layout_height="68dp"
+            android:text="@string/c5"
+            android:textSize="24sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.35" />
+
+        <Button
+            style="?attr/materialButtonElevatedStyle"
+            android:id="@+id/btn6"
+            android:layout_width="68dp"
+            android:layout_height="68dp"
+            android:text="@string/c6"
+            android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.9"
@@ -161,59 +166,17 @@
 
         <Button
             style="?attr/materialButtonElevatedStyle"
-            android:id="@+id/btn4"
-            android:layout_width="68dp"
-            android:layout_height="68dp"
-            android:text="@string/c4"
-            android:textSize="18sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.1"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.55" />
-
-        <Button
-            style="?attr/materialButtonElevatedStyle"
-            android:id="@+id/btn5"
-            android:layout_width="68dp"
-            android:layout_height="68dp"
-            android:text="@string/c5"
-            android:textSize="18sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.55" />
-
-        <Button
-            style="?attr/materialButtonElevatedStyle"
-            android:id="@+id/btn6"
-            android:layout_width="68dp"
-            android:layout_height="68dp"
-            android:text="@string/c6"
-            android:textSize="18sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.9"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.55" />
-
-        <Button
-            style="?attr/materialButtonElevatedStyle"
             android:id="@+id/btn7"
             android:layout_width="68dp"
             android:layout_height="68dp"
             android:text="@string/c7"
-            android:textSize="18sp"
+            android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.1"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.75" />
+            app:layout_constraintVertical_bias="0.65" />
 
         <Button
             style="?attr/materialButtonElevatedStyle"
@@ -221,13 +184,13 @@
             android:layout_width="68dp"
             android:layout_height="68dp"
             android:text="@string/c8"
-            android:textSize="18sp"
+            android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.75" />
+            app:layout_constraintVertical_bias="0.65" />
 
         <Button
             style="?attr/materialButtonElevatedStyle"
@@ -235,13 +198,13 @@
             android:layout_width="68dp"
             android:layout_height="68dp"
             android:text="@string/c9"
-            android:textSize="18sp"
+            android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.9"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.75" />
+            app:layout_constraintVertical_bias="0.65" />
 
         <Button
             style="?attr/materialButtonElevatedStyle"
@@ -265,7 +228,7 @@
             android:layout_width="68dp"
             android:layout_height="68dp"
             android:text="@string/c0"
-            android:textSize="18sp"
+            android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -298,6 +261,6 @@
         android:layout_height="wrap_content"
         app:icon="@drawable/ic_action_fingerprint"
         app:iconSize="48dp"
-        android:visibility="gone"
+        android:visibility="invisible"
         tools:visibility="visible" />
 </LinearLayout>
