--- a/app/src/main/res/layout/item_token.xml
+++ b/app/src/main/res/layout/item_token.xml
@@ -1,95 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Фрейм одной строчки токенов в ListView. -->
-<FrameLayout
+<!-- Элемент с токеном для RecyclerView в MainActivity. -->
+<com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/itemToken"
+    android:layout_margin="4dp"
+    android:clickable="true"
+    android:focusable="true"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="4dp">
+    android:layout_height="wrap_content">
 
-   <com.google.android.material.card.MaterialCardView
-        android:id="@+id/itemToken"
-        android:clickable="true"
-        android:focusable="true"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="2dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="16dp"
-            android:paddingBottom="16dp"
-            android:paddingStart="16dp"
-            android:paddingEnd="2dp">
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="RIPE NCC: username@example.ru" />
 
-            <TextView
-                android:id="@+id/name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="RIPE NCC: username@example.ru" />
+        <TextView
+            android:id="@+id/totp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textSize="24sp"
+            android:textColor="?attr/colorOnPrimaryContainer"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/name"
+            tools:text="88888888" />
 
-            <TextView
-                android:id="@+id/totp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:textSize="24sp"
-                android:textColor="?attr/colorOnPrimaryContainer"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/name"
-                tools:text="88888888" />
+        <TextView
+            android:id="@+id/totpNext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:textSize="12sp"
+            android:textColor="?attr/colorOnPrimaryContainer"
+            app:layout_constraintBottom_toBottomOf="@+id/totp"
+            app:layout_constraintStart_toEndOf="@+id/totp"
+            tools:text="88888888" />
 
-            <TextView
-                android:id="@+id/totpNext"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:textSize="12sp"
-                android:textColor="?attr/colorOnPrimaryContainer"
-                app:layout_constraintBottom_toBottomOf="@+id/totp"
-                app:layout_constraintStart_toEndOf="@+id/totp"
-                tools:text="88888888" />
+        <TextView
+            android:id="@+id/remain"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="?attr/colorOnPrimaryContainer"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="@+id/progress"
+            app:layout_constraintEnd_toEndOf="@+id/progress"
+            app:layout_constraintTop_toTopOf="@+id/progress"
+            app:layout_constraintBottom_toBottomOf="@+id/progress"
+            tools:text="08"
+            tools:ignore="VisualLintOverlap" />
 
-            <TextView
-                android:id="@+id/remain"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="?attr/colorOnPrimaryContainer"
-                android:textSize="12sp"
-                app:layout_constraintStart_toStartOf="@+id/progress"
-                app:layout_constraintEnd_toEndOf="@+id/progress"
-                app:layout_constraintTop_toTopOf="@+id/progress"
-                app:layout_constraintBottom_toBottomOf="@+id/progress"
-                tools:text="08"
-                tools:ignore="VisualLintOverlap" />
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:id="@+id/progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="48dp"
+            android:indeterminate="false"
+            app:trackThickness="4dp"
+            app:indicatorColor="?attr/colorOnPrimaryContainer"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
-            <com.google.android.material.progressindicator.CircularProgressIndicator
-                android:id="@+id/progress"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="48dp"
-                android:indeterminate="false"
-                app:trackThickness="4dp"
-                app:indicatorColor="?attr/colorOnPrimaryContainer"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent" />
-
-            <Button
-                style="?attr/materialIconButtonStyle"
-                android:id="@+id/btnMenu"
-                android:contentDescription="@string/menu"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:icon="@drawable/ic_action_more"
-                app:iconTint="?attr/colorOnSurface"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-   </com.google.android.material.card.MaterialCardView>
-</FrameLayout>
+        <Button
+            style="?attr/materialIconButtonStyle"
+            android:id="@+id/btnMenu"
+            android:contentDescription="@string/menu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:icon="@drawable/ic_action_more"
+            app:iconTint="?attr/colorOnSurface"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</com.google.android.material.card.MaterialCardView>
