--- a/app/src/main/res/layout/partial_fab_qr.xml
+++ b/app/src/main/res/layout/partial_fab_qr.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Кнопка FAB. -->
-<com.google.android.material.floatingactionbutton.FloatingActionButton
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.floatingactionbutton.FloatingActionButton xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/floatingActionButtonQR"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_gravity="bottom|end"
     android:layout_margin="16dp"
     android:clickable="true"
     android:contentDescription="@string/qr"
-    android:layout_gravity="bottom|end"
     app:srcCompat="@drawable/ic_action_qr"
     tools:ignore="ImageContrastCheck,ClassNameCheck" />
