--- a/app/src/main/res/menu/top_app_bar.xml
+++ b/app/src/main/res/menu/top_app_bar.xml
@@ -6,13 +6,13 @@
         android:title="@string/add"
         android:id="@+id/item_add_token"
         android:icon="@drawable/ic_action_add"
-        android:contentDescription="@string/add"
+        app:contentDescription="@string/add"
         app:showAsAction="ifRoom" />
 
     <item
         android:title="@string/qr"
         android:id="@+id/item_qr"
         android:icon="@drawable/ic_action_qr"
-        android:contentDescription="@string/qr"
+        app:contentDescription="@string/qr"
         app:showAsAction="ifRoom" />
 </menu>
