--- a/app/src/main/res/layout/activity_export.xml
+++ b/app/src/main/res/layout/activity_export.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Layout для MainActivity. -->
+<!-- Layout для ExportActivity. -->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/frameMainActivity"
+    android:id="@+id/frameExportActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity" >
+    tools:context=".ExportActivity">
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
@@ -16,24 +16,21 @@
             android:layout_weight="1">
 
             <!-- Top AppBar. -->
-            <include layout="@layout/partial_app_bar_main" />
+            <include layout="@layout/partial_app_bar_export" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/tokensList"
+                android:id="@+id/secretsList"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:divider="@null"
-                tools:listitem="@layout/item_token"
+                tools:listitem="@layout/item_otpauth"
                 tools:itemCount="5"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"
                 android:paddingBottom="100dp"
                 android:clipToPadding="false" />
-
-            <!-- FAB. -->
-            <include layout="@layout/partial_fab_qr" />
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-    <!-- Top BottomBar. -->
-    <include layout="@layout/partial_bottom_navigation" />
+    <!-- Bottom bar. -->
+    <include layout="@layout/partial_bottom_button" />
 </LinearLayout>
